--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "assignment",
+  "name": "cypherx",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -34,5 +32,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Rajat2024/cypherx_assignment"
+  },
+  "keywords": [
+    "cypher",
+    "assignment"
+  ],
+  "author": "Rajat Singh",
+  "license": "ISC"
 }
