--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "This project is Assignment Given by cypher.",
   "main": "index.js",
   "repository": {
     "type": "git",
